# ComfyUI-kaola-VibeVoice-ASR

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  vibevoice_workflow_example.json
.claude/: hooks-config.json  phase-status.json
VibeVoice_src/demo/: vibevoice_asr_gradio_demo.py
VibeVoice_src/vibevoice/modular/: modeling_vibevoice.py  modeling_vibevoice_asr.py  modeling_vibevoice_inference.py  modeling_vibevoice_streaming_inference.py  modular_vibevoice_text_tokenizer.py  modular_vibevoice_tokenizer.py
VibeVoice_src/vibevoice/processor/: vibevoice_asr_processor.py  vibevoice_processor.py
VibeVoice_src/vibevoice/schedule/: dpm_solver.py
examples/: vibevoice_streaming_workflow.json  vibevoice_tts_multispeaker_batch_workflow.json  vibevoice_tts_multispeaker_workflow.json  vibevoice_tts_workflow.json  vibevoice_workflow_example.json
js/: vibevoice.js
tests/: test_1_5b_tts.py  test_asr.py  test_chunked_processing.py  test_nodes.py  test_srt_custom.py
