[project]
name = "comfyui-kaola-vibevoice-asr"
description = "ComfyUI custom nodes for VibeVoice ASR (Automatic Speech Recognition) with support for auto-labeling music/lyrics and high accuracy transcription."
version = "1.0.3"
license = {file = "LICENSE"} 
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: Apple Metal",
]

[project.urls]
Repository = "https://github.com/kana112233/ComfyUI-kaola-VibeVoice-ASR"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/kana112233/ComfyUI-kaola-VibeVoice-ASR/blob/main/README.md"
"Bug Tracker" = "https://github.com/kana112233/ComfyUI-kaola-VibeVoice-ASR/issues"

[tool.comfy]
PublisherId = "kaola"
DisplayName = "ComfyUI-Kaola-VibeVoice-ASR"
Icon = ""